# Combinamento

./: .gitignore  Makefile.am  configure.ac
src/: jackknife4.c  jackknife4.cpp  suscettivita_ord_4.c  suscettivita_ord_4.cpp
